<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNewRequestLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/CreateNewRequestItemInfoLayoutTop"
        android:layout_width="408dp"
        android:layout_height="474dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CreateRequestTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateRequestTitle"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/CreateNewRequestRequestedItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RequestItemTitle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/CreateNewRequestRequestedItemInfo"
            android:layout_width="match_parent"
            android:layout_height="82dp" />

        <TextView
            android:id="@+id/CreateNewRequestOfferingItemSectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OfferingItemSectionTitle"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/CreateNewRequestAddedItemsList"
            android:layout_width="397dp"
            android:layout_height="310dp">

        </ListView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/CreateNewRequestItemInfoLayoutBottom"
        android:layout_width="407dp"
        android:layout_height="256dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/CreateNewRequestOfferingItemSpinner"
            android:layout_width="match_parent"
            android:layout_height="91dp" />

        <Button
            android:id="@+id/CreateNewRequestOfferingItemAddBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add" />

        <Button
            android:id="@+id/CreateNewRequestOfferingItemSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Submit" />

        <Button
            android:id="@+id/CreateNewRequestOfferingItemCancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>